# bulletstorm

./: .gitignore  README.md  TODO.md  pyproject.toml
bulletstorm/: __main__.py  window.py
bulletstorm/app/: __init__.py  __main__.py  core.py  log.py  window.py
bulletstorm/app/gui/: __init__.py  core.py  page.py
bulletstorm/app/gui/widgets/: battlecore.py  core.py  spacebattle.py  test.py
bulletstorm/app/views/: __init__.py  gameover.py  maingame.py  pause.py  primary.py
bulletstorm/battle/: __main__.py
bulletstorm/battle/core/: battle.py  engine.py  party.py
bulletstorm/battle/game/actors/: heroes.py
bulletstorm/battlecore/: __init__.py  __main__.py
bulletstorm/battlecore/core/: actor.py  battle.py  engine.py  stats.py
bulletstorm/battlecore/game/: __init__.py
bulletstorm/battlecore/game/actors/: __init__.py  enemies.py
bulletstorm/core/: utils.py
bulletstorm/core/entity/: README.md  base.py  manager.py
bulletstorm/core/entity/agent/: graphline.py  manager.py
bulletstorm/core/entity/player/: base.py
bulletstorm/core/gui/: widget.py
bulletstorm/core/level/: base.py  view_mixin.py
bulletstorm/core/shader/: program.py  toy.py  view_mixin.py
bulletstorm/game/: level.py
bulletstorm/game/battlecore/: .gitignore  __main__.py
bulletstorm/game/battlecore/core/: engine.py  utils.py
bulletstorm/game/entity/: __init__.py  agent.py  asteroid.py  core.py  entity.py  explosion.py  manager.py  player.py  projectile.py
bulletstorm/game/entity/actions/: attacks.py
bulletstorm/game/levels/: level.py  spacelevel.py
bulletstorm/gui/: __init__.py  guiview.py  widget.py
bulletstorm/views/: __init__.py  gameover.py  pause.py
bulletstorm/views/gui/: shader.py  view.py
bulletstorm/views/maingame/: view.py
tests/: profile.sh
(+70 files in other folders)
