[tool.poetry]
name = "bulletstorm"
version = "0.1.0"
description = ""
authors = ["Grayson Miller <grayson.miller124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
arcade = "^2.6.17"
arcade-imgui = { git = "https://github.com/kfields/arcade-imgui", python = ">=3.10,<3.12" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bstorm = "bulletstorm.app.__main__:main"
bcore = "bulletstorm.battlecore.__main__:main"