[tool.poetry]
name = "bulletstorm"
version = "0.1.0"
description = ""
authors = ["Grayson Miller <grayson.miller124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
arcade = "^2.6.17"
arcade-imgui = { git = "https://github.com/kfields/arcade-imgui", python = ">=3.10,<3.12" }
networkx = "^3.2.1"
numpy = "^1.26.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bstorm = "bulletstorm.__main__:main"
bcore = "bulletstorm.views.maingame.battlecore.__main__:main"