[tool.poetry]
name = "bulletstorm"
version = "0.1.0"
description = ""
authors = ["Grayson Miller <grayson.miller124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
arcade = "^2.6.17"
arcade-imgui = { git = "https://github.com/kfields/arcade-imgui", python = ">=3.10,<3.12" }
networkx = "^3.2.1"
numpy = "^1.26.2"
imgui = "^2.0.0"
numba = "^0.58.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bstorm = "bulletstorm.__main__:main"
bcore = "bulletstorm.battle.__main__:main"
